Huge cleanup (still WIP), remove the need for command line args when using stuff in ReflectionUtils while still retaining access to all internal APIs, documentation pass (still WIP)