@@ -5,25 +5,27 @@ import org.jetbrains.annotations.NotNull;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
-import java.lang.reflect.AccessibleObject;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
+import java.lang.reflect.*;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
+ * <b>WIP</b> <br>
+ * TODO: documentation, more helpers for internal methods <br>
  * Helper class that contains some useful methods for easier / more powerful reflection usage. <br>
- * <br>
- * <b>Note: </b>Usage of this class demands that the application is launched with the <code>"--add-exports"</code> and
- * <code>"java.base/jdk.internal.misc=ALL-UNNAMED"</code> arguments to expose the {@link jdk.internal.misc} package at runtime.
  *
  * @author Lollopollqo
  */
 @SuppressWarnings("unused")
 public class ReflectionUtils {
     /**
+     * The {@link sun.misc.Unsafe} instance
+     */
+    private static final sun.misc.Unsafe UNSAFE;
+    /**
      * The {@link jdk.internal.misc.Unsafe} instance
      */
-    private static final jdk.internal.misc.Unsafe UNSAFE;
+    private static final jdk.internal.misc.Unsafe INTERNAL_UNSAFE;
     /**
      * Trusted lookup
      */
@@ -32,11 +34,40 @@ public class ReflectionUtils {
      * Handle for {@link AccessibleObject#setAccessible0(boolean)}
      */
     private static final MethodHandle setAccessible0;
+    /**
+     * Handle for {@link Module#addExportsToAll0(Module, String)}
+     */
+    private static final MethodHandle addExportsToAll0;
+    /**
+     * Handle for {@link Module#addExports0(Module, String, Module)}
+     */
+    private static final MethodHandle addExports0;
 
     static {
-        UNSAFE = jdk.internal.misc.Unsafe.getUnsafe();
+        UNSAFE = findUnsafe();
+
         LOOKUP = createTrustedLookup();
+
         setAccessible0 = setAccessible0Handle();
+        addExportsToAll0 = addExportsToAll0Handle();
+        addExports0 = addExports0Handle();
+
+        // Export the jdk.internal.misc package from the java.base module to the module this class is in, so we can access its contents
+        {
+            try {
+                final String packageName = "jdk.internal.misc";
+                final String className = "Unsafe";
+                final Class<?> internalUnsafeClass = Class.forName(packageName + "." + className);
+                final Module from = internalUnsafeClass.getModule();
+                final Module to = ReflectionUtils.class.getModule();
+
+                exportPackageToModule(from, packageName, to);
+            } catch (ClassNotFoundException cnfe) {
+                throw new RuntimeException("Could not export jdk.internal.misc to module " + ReflectionUtils.class.getModule().getName() + "!", cnfe);
+            }
+        }
+
+        INTERNAL_UNSAFE = jdk.internal.misc.Unsafe.getUnsafe();
     }
 
     /**
@@ -112,8 +143,36 @@ public class ReflectionUtils {
         try {
             return (boolean) setAccessible0.bindTo(object).invokeExact(accessible);
         } catch (Throwable e) {
-            // This should never happen
-            throw new RuntimeException(e);
+            throw new RuntimeException("Could not force the accessibility of " + object + " to be set to " + accessible, e);
+        }
+    }
+
+    /**
+     * Exports the specified package from the specified module to all modules.
+     *
+     * @param from        The module the package belongs to
+     * @param packageName The name of the package
+     * @param to          The module the package is to be exported to
+     */
+    public static void exportPackageToModule(Module from, String packageName, Module to) {
+        try {
+            addExports0.invokeExact(from, packageName, to);
+        } catch (Throwable e) {
+            throw new RuntimeException("Could not export package " + packageName + " from module " + from.getName() + " to module " + to.getName() + "!", e);
+        }
+    }
+
+    /**
+     * Exports the specified package from the specified module to all modules.
+     *
+     * @param from        The module the package belongs to
+     * @param packageName The name of the package
+     */
+    public static void exportPackageToAll(Module from, String packageName) {
+        try {
+            addExportsToAll0.invokeExact(from, packageName);
+        } catch (Throwable e) {
+            throw new RuntimeException("Could not export package " + packageName + " from module " + from.getName() + " to all modules!", e);
         }
     }
 
@@ -122,12 +181,12 @@ public class ReflectionUtils {
      * This method bypasses any limitations that {@link Class#getDeclaredField(String)} has (see {@link jdk.internal.reflect.Reflection#registerFieldsToFilter}).
      *
      * @param owner The class that declares the field
-     * @param name The name of the field
-     * @param type The type of the field
+     * @param name  The name of the field
+     * @param type  The type of the field
      * @return the value of the field
      */
     @SuppressWarnings("unchecked")
-    public static <T> T getFieldValue(Object owner, String name, Class<T> type) {
+    public static <T> T getField(Object owner, String name, Class<T> type) {
         try {
             return (T) findGetter(owner.getClass(), name, type).invoke(owner);
         } catch (Throwable e) {
@@ -251,6 +310,38 @@ public class ReflectionUtils {
         return clazz.getModule().getName() + '/' + clazz.getName();
     }
 
+    /* This section contains the hacks that make this whole class work */
+
+    /**
+     * Gets a reference to the {@link sun.misc.Unsafe} instance in a JDK agnostic way, which means not relying on the field name.
+     *
+     * @return the {@link sun.misc.Unsafe} instance
+     */
+    private static sun.misc.Unsafe findUnsafe() {
+        final int unsafeModifiers = Modifier.STATIC | Modifier.FINAL;
+
+        final List<Throwable> exceptions = new ArrayList<>();
+        for (Field field : sun.misc.Unsafe.class.getDeclaredFields()) {
+
+            if (field.getType() != sun.misc.Unsafe.class || (field.getModifiers() & unsafeModifiers) != unsafeModifiers) {
+                continue;
+            }
+
+            try {
+                field.setAccessible(true);
+                if (field.get(null) instanceof sun.misc.Unsafe unsafe) {
+                    return unsafe;
+                }
+            } catch (Throwable e) {
+                exceptions.add(e);
+            }
+        }
+
+        RuntimeException exception = new RuntimeException("Could not find sun.misc.Unsafe instance!");
+        exceptions.forEach(exception::addSuppressed);
+        throw exception;
+    }
+
     /**
      * Finds the offset of the {@link AccessibleObject#override} field in an {@link AccessibleObject} instance.
      *
@@ -288,19 +379,6 @@ public class ReflectionUtils {
         }
 
         return overrideOffset;
-    }
-
-    /**
-     * Gets a {@link MethodHandle} for {@link AccessibleObject#setAccessible0(boolean)}.
-     *
-     * @return the acquired {@link MethodHandle}
-     */
-    private static MethodHandle setAccessible0Handle() {
-        try {
-            return findVirtual(AccessibleObject.class, "setAccessible0", boolean.class, boolean.class);
-        } catch (ReflectiveOperationException e) {
-            throw new RuntimeException("Could not get AccessibleObject#setAccessible0 handle!", e);
-        }
     }
 
     /**
@@ -342,6 +420,54 @@ public class ReflectionUtils {
         } catch (InstantiationException ie) {
             throw new RuntimeException("Failed to allocate instance of " + getModuleInclusiveClassName(clazz), ie);
         }
+    }
+
+    /* Caching for important MethodHandles */
+
+    /**
+     * Gets a {@link MethodHandle} for {@link Module#addExportsToAll0(Module, String)}.
+     *
+     * @return the acquired {@link MethodHandle}
+     */
+    private static MethodHandle setAccessible0Handle() {
+        try {
+            return findVirtual(AccessibleObject.class, "setAccessible0", boolean.class, boolean.class);
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("Could not get AccessibleObject#setAccessible0 handle!", e);
+        }
+    }
+
+    /**
+     * Gets a {@link MethodHandle} for {@link Module#addExports0(Module, String, Module)}.
+     *
+     * @return the acquired {@link MethodHandle}
+     */
+    private static MethodHandle addExports0Handle() {
+        try {
+            return findStatic(Module.class, "addExports0", void.class, Module.class, String.class, Module.class);
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("Could not get Module#addExports0(Module, String, Module) handle!", e);
+        }
+    }
+
+    /**
+     * Gets a {@link MethodHandle} for {@link Module#addExportsToAll0(Module, String)}.
+     *
+     * @return the acquired {@link MethodHandle}
+     */
+    private static MethodHandle addExportsToAll0Handle() {
+        try {
+            return findStatic(Module.class, "addExportsToAll0", void.class, Module.class, String.class);
+        } catch (ReflectiveOperationException e) {
+            throw new RuntimeException("Could not get Module#addExportsToAll0(Module, String) handle!", e);
+        }
+    }
+
+    /**
+     * Private constructor to prevent instantiation.
+     */
+    private ReflectionUtils() {
+        throw new AssertionError("Instantiation attempted for " + getModuleInclusiveClassName(ReflectionUtils.class));
     }
 
 }
